# IncentiveAllocation

./: README.md  pyproject.toml
IncentiveAllocation/: __init__.py
IncentiveAllocation/Evaluator/: BinaryTreatmentEvaluator.py
IncentiveAllocation/Learner/: BinaryTreatmentLearner.py
IncentiveAllocation/Optimizer/: BinaryTreatmentOptimizer.py
IncentiveAllocation/Policy/: BinaryTreatmentPolicy.py
example/: example.ipynb
