[tool.poetry]
name = "incentiveallocation"
version = "0.1.0"
description = ""
authors = ["hand10ryo <hand10ryo@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
scikit-uplift = "^0.5.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
black = "^23.7.0"
jupyter = "^1.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"